# CASP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-publish.yml
examples/: buffer_copy.c  simple.c  test_buffer_copy.c  test_standalone.sh
include/: StaticProfileExporter.h
lib/: CASPPlugin.cpp  StaticProfileExporter.cpp  casp-tool.cpp
